# aeron

./: .gitignore  CHANGELOG.adoc  CMakeLists.txt  build.gradle  settings.gradle  version.txt
aeron-archive/src/main/c/: CMakeLists.txt
aeron-archive/src/main/c/client/: aeron_archive.h  aeron_archive_async_client.c  aeron_archive_async_client.h  aeron_archive_async_connect.c  aeron_archive_client.c  aeron_archive_context.c  aeron_archive_persistent_subscription.c  aeron_archive_persistent_subscription.h  aeron_archive_persistent_subscription_internal.h  aeron_archive_proxy.c  aeron_archive_proxy.h  aeron_archive_replay_merge.c
aeron-archive/src/main/c/server/: README.md  aeron_archive_catalog.c  aeron_archive_catalog.h  aeron_archive_conductor.c  aeron_archive_conductor.h  aeron_archive_control_response_proxy.c  aeron_archive_control_response_proxy.h  aeron_archive_control_session.c  aeron_archive_control_session.h  aeron_archive_control_session_adapter.c  aeron_archive_control_session_adapter.h  aeron_archive_control_session_proxy.c  aeron_archive_control_session_proxy.h  aeron_archive_dedicated_conductor.c  aeron_archive_dedicated_conductor.h  aeron_archive_delete_segments_session.c  aeron_archive_delete_segments_session.h  aeron_archive_list_recordings_session.c  aeron_archive_list_recordings_session.h  aeron_archive_mark_file.c  aeron_archive_mark_file.h  aeron_archive_recording_events_proxy.c  aeron_archive_recording_events_proxy.h  aeron_archive_recording_reader.c  aeron_archive_recording_reader.h  aeron_archive_recording_session.c  aeron_archive_recording_session.h  aeron_archive_recording_writer.c  aeron_archive_recording_writer.h  aeron_archive_replay_session.c  aeron_archive_replay_session.h  aeron_archive_replication_session.c  aeron_archive_replication_session.h  aeron_archive_server.c  aeron_archive_server.h  aeron_archive_session_worker.c  aeron_archive_session_worker.h  aeron_archive_tool.c  aeron_archive_tool.h  aeron_archive_update_channel_session.c  (+3 more)
aeron-cluster/src/main/c/: CLUSTER_IMPLEMENTATION_GUIDE.md  CMakeLists.txt  README.md  STATUS.md
aeron-cluster/src/main/c/backup/: CMakeLists.txt  aeron_cluster_backup_agent.c  aeron_cluster_backup_agent.h  aeron_cluster_backup_media_driver.c  aeron_cluster_backup_media_driver.h  aeron_cluster_snapshot_replication.c  aeron_cluster_snapshot_replication.h  aeron_cluster_standby_snapshot_replicator.c  aeron_cluster_standby_snapshot_replicator.h
aeron-cluster/src/main/c/client/: IMPLEMENTATION_GUIDE.md  README.md  aeron_cluster.h  aeron_cluster_async_connect.c  aeron_cluster_async_connect.h  aeron_cluster_client.c  aeron_cluster_client.h  aeron_cluster_client_version.c  aeron_cluster_client_version.h  aeron_cluster_configuration.c  aeron_cluster_configuration.h  aeron_cluster_context.c  aeron_cluster_context.h  aeron_cluster_controlled_egress_adapter.c  aeron_cluster_controlled_egress_adapter.h  aeron_cluster_credentials_supplier.c  aeron_cluster_credentials_supplier.h  aeron_cluster_egress_adapter.c  aeron_cluster_egress_adapter.h  aeron_cluster_egress_poller.c  aeron_cluster_egress_poller.h  aeron_cluster_ingress_proxy.c  aeron_cluster_ingress_proxy.h  aeron_cluster_ingress_session_decorator.c  aeron_cluster_ingress_session_decorator.h
aeron-cluster/src/main/c/consensus/: CMakeLists.txt  README.md  aeron_cluster_cluster_session.c  aeron_cluster_cluster_session.h  aeron_cluster_cm_snapshot_loader.c  aeron_cluster_cm_snapshot_loader.h  aeron_cluster_cm_snapshot_taker.c  aeron_cluster_cm_snapshot_taker.h  aeron_cluster_consensus_adapter.c  aeron_cluster_consensus_adapter.h  aeron_cluster_consensus_module_adapter.c  aeron_cluster_consensus_module_adapter.h  aeron_cluster_consensus_publisher.c  aeron_cluster_consensus_publisher.h  aeron_cluster_egress_publisher.c  aeron_cluster_egress_publisher.h  aeron_cluster_election.c  aeron_cluster_election.h  aeron_cluster_ingress_adapter_cm.c  aeron_cluster_ingress_adapter_cm.h  aeron_cluster_log_adapter.c  aeron_cluster_log_adapter.h  aeron_cluster_log_publisher.c  aeron_cluster_log_publisher.h  aeron_cluster_log_replay.c  aeron_cluster_log_replay.h  aeron_cluster_mark_file.c  aeron_cluster_mark_file.h  aeron_cluster_member.c  aeron_cluster_member.h  aeron_cluster_multi_recording_replication.c  aeron_cluster_multi_recording_replication.h  aeron_cluster_pending_message_tracker.c  aeron_cluster_pending_message_tracker.h  aeron_cluster_recording_log.c  aeron_cluster_recording_log.h  aeron_cluster_recording_replication.c  aeron_cluster_recording_replication.h  aeron_cluster_service_proxy_cm.c  aeron_cluster_service_proxy_cm.h  (+12 more)
aeron-cluster/src/main/c/service/: CMakeLists.txt  README.md  SERVICE_IMPLEMENTATION_GUIDE.md  aeron_cluster_bounded_log_adapter.c  aeron_cluster_bounded_log_adapter.h  aeron_cluster_client_session.c  aeron_cluster_client_session.h  aeron_cluster_consensus_module_proxy.c  aeron_cluster_consensus_module_proxy.h  aeron_cluster_node_state_file.c  aeron_cluster_node_state_file.h  aeron_cluster_recovery_state.c  aeron_cluster_recovery_state.h  aeron_cluster_service.h  aeron_cluster_service_adapter.c  aeron_cluster_service_adapter.h  aeron_cluster_service_container.c  aeron_cluster_service_container.h  aeron_cluster_service_context.c  aeron_cluster_service_context.h  aeron_cluster_service_snapshot_loader.c  aeron_cluster_service_snapshot_loader.h  aeron_cluster_service_snapshot_taker.c  aeron_cluster_service_snapshot_taker.h  aeron_clustered_service_agent.c  aeron_clustered_service_agent.h
aeron-cluster/src/main/cpp_wrapper/: CMakeLists.txt
aeron-cluster/src/main/cpp_wrapper/consensus/: ConsensusModule.h  ConsensusModuleContext.h
aeron-cluster/src/test/c/: CMakeLists.txt  TEST_MIGRATION_GUIDE.md
aeron-cluster/src/test/c/consensus/: CMakeLists.txt  MockElectionAgent.h  aeron_mock_election_agent.h
aeron-cluster/src/test/c/integration/: ClusterEchoTest.cpp  ClusterIntegrationTest.cpp  ClusterServerHelper.cpp  (+10 more)
aeron-cluster/src/test/cpp_wrapper/: AeronClusterWrapperTest.cpp  CMakeLists.txt  ClusteredServiceContainerTest.cpp  EgressPollerTest.cpp
(+611 files in other folders)
